--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -75,11 +75,15 @@
 
           .main__showMain__contents__topContent__itemBox__buttonBox
             - if user_signed_in? && current_user.id == @product.user_id
-              .editBtn
-                = link_to edit_product_path(@product.id), class: 'edit-Btn' do
-                  編集する
-              .editBtn
-                = link_to "削除する", "#", class: 'deleteBtn'
+              - if @product.sold_out_flg == false
+                .editBtn
+                  = link_to edit_product_path(@product.id), class: 'edit-Btn' do
+                    編集する
+                .editBtn
+                  = link_to "削除する", "#", class: 'deleteBtn'
+              - else
+                .editBtn
+                  = link_to "配送完了しました", "#", class: 'edit-Btn'
             - else
               - if @product.sold_out_flg == false
                 .editBtn
