パンくず（部分テンプレート）実装

--- a/app/assets/stylesheets/modules/body_application.scss
+++ b/app/assets/stylesheets/modules/body_application.scss
@@ -50,3 +50,12 @@
   padding: 10px, 20px;
   width: 100%;
 }
+.Pan{
+  width: 100vw;
+  height: 30px;
+  font-size: 15px;
+  padding: 10px 0 0 200px;
+  background-color: #fff;
+  border-top: 1px solid rgb(212, 212, 212);
+  box-shadow: 0 15px 20px 0 rgba(161, 161, 161, 0.5);
+}
