--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,15 +1,13 @@
+.Pan
+  - breadcrumb :product_show
+  = render "layouts/breadcrumbs"
 .main
-
   .main__showMain
     .main__showMain__contents
-
       .main__showMain__contents__topContent
-
         .main__showMain__contents__topContent__itemBox
-
           %h2.main__showMain__contents__topContent__itemBox__name 
             = @product.name
-
           .main__showMain__contents__topContent__itemBox__image
             .imageBox
               .mainImage
