--- a/app/views/products/purchase.html.haml
+++ b/app/views/products/purchase.html.haml
@@ -29,7 +29,7 @@
             %tbody
               %tr
                 %td
-                  = image_tag ('cards/visa.svg'), class: 'card_image'
+                  = image_tag (@card_src), class: 'card_image'
                   %br
                   カード番号：
                   = "**** **** **** " + @customer_card.last4
