売り切れ商品のみの売り切れ表示実装

--- a/app/assets/stylesheets/modules/product_index.scss
+++ b/app/assets/stylesheets/modules/product_index.scss
@@ -24,6 +24,9 @@
           color: black;
         }
         &__Image {
+          .soldOut_flg{
+            position: absolute;
+          }
           .relationImg {
             width: 220px;
             height: 150px;
