--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -6,6 +6,8 @@
         .productField__ProductBox
           = link_to product_path(product.id), class: "productLink" do
             .productField__ProductBox__Image
+              - if product.sold_out_flg == true
+                = image_tag ('topimage/sold_out.png'), class: "relationImg soldOut_flg"
               = image_tag product.images[0].image_url, class: "relationImg"
               .productField__ProductBox__Info
                 .prductField__ProductBox__Info__Name
