--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -28,6 +28,13 @@ body{
                 flex-direction: column;
                 width: 560px;
                 margin: 0 auto;
+                position: relative;
+                .mainSoldOut{
+                  position: absolute;
+                  object-fit: fill;
+                  height: 346px;
+
+                }
                 .img{
                   border: 2px solid;
                   object-fit: fill;
@@ -256,6 +263,9 @@ body{
               color: black;
             }
             &__Image {
+              .soldOut_flg{
+                position: absolute;
+              }
               .relationImg {
                 width: 220px;
                 height: 150px;
