--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
             = link_to root_path do
               = image_tag("topimage/logo.png") 
           .Headfield__Top__Searchbox
-            = form_with url: top_search_products_path, class: "search-form", method: :get, local: true do |form|
+            = form_with url: products_path, class: "search-form", method: :get, local: true do |form|
               = form.text_field :keyword, class: "Headfield__Top__Searchbox--input",placeholder: "キーワードから探す"
               = form.submit "検索", class: "search-btn"
               -# .Headfield__Top__Searchbox--icon
