--- a/app/assets/stylesheets/modules/product_index.scss
+++ b/app/assets/stylesheets/modules/product_index.scss
@@ -1,19 +1,21 @@
 .productLists{
   padding: 20px;
   .productList{
+    width: 85%;
     margin: 0 auto;
     .listTitle{
       color: black;
       text-align: center;
-      font-size: 25px;
+      font-size: 30px;
       font-weight: bold;
       margin-bottom: 10px;
+      margin: 30px;
     }
     .productField{
       flex-direction: row;
       flex-wrap: wrap;
       display: flex;
-      justify-content: space-between;
+      margin: 0 auto;
       &__ProductBox{
         height: 245px;
         width: 220px;
