--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,3 +1,6 @@
+.Pan
+  - breadcrumb :products
+  = render "layouts/breadcrumbs"
 .productLists
   .productList
     %h1.listTitle 出品商品一覧
@@ -13,9 +16,8 @@
                 .prductField__ProductBox__Info__Name
                   = product.name
                 .productField__ProductBox__Info__Ele
-                  .prductField__ProductBox__Info__Ele__Price
-                    ¥
-                    = product.price
+                  .prductField__ProductBox__Info__Ele__Price 
+                    = "¥#{number_with_delimiter(product.price)}"
                   .productField__ProductBox__Info__Ele__Favorite
                     = icon('fa','star likeIcon')
                     0
