--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,15 +17,17 @@
             = link_to root_path do
               = image_tag("topimage/logo.png") 
           .Headfield__Top__Searchbox
-            = form_with url: products_path, class: "search-form", method: :get, local: true do |form|
+            -# = form_tag url: products_path, class: "Headfield__Top__Searchbox", method: :get do
+            -#   = text_field :keyword, class: "Headfield__Top__Searchbox--input",placeholder: "キーワードから探す"
+            -#   = submit_tag "検索", class: "Headfield__Top__Searchbox--icon"
+
+            = form_with url: products_path, class: "Headfield__Top__Searchbox", method: :get, local: true do |form|
               = form.text_field :keyword, class: "Headfield__Top__Searchbox--input",placeholder: "キーワードから探す"
-              = form.submit "検索", class: "search-btn"
+              = form.submit "", class: "Headfield__Top__Searchbox--icon"
+              -# %button.Headfield__Top__Searchbox--icon{type :submit}
+                
               -# .Headfield__Top__Searchbox--icon
               -#   = image_tag ("topimage/icon-search 1.png"), class: "circle"
-            -# <%= form_with(url: search_tweets_path, local: true, method: :get, class: "search-form") do |form| %>
-            -#   <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
-            -#   <%= form.submit "検索", class: "search-btn" %>
-            -# <% end %>
 
         .Headfield__Bottom
           .Headfield__Bottom__left
