--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -54,6 +54,7 @@ body{
                       border: 1px solid rgb(194, 192, 192);
                       object-fit: cover;
                       height: 87px;
+                      width: 87px;
                     }
                   }
                 }
