--- a/app/views/mypage/purchasers/index.html.haml
+++ b/app/views/mypage/purchasers/index.html.haml
@@ -15,6 +15,27 @@
           %li 過去の取引
       %ul.Contents
         %li.Content.show
-          = render "mypage/listings/products_list"
+          %table.ProductsList
+            %tbody
+              - @buyer_products.each do |buy|
+                - if buy.product.sold_out_flg == 1
+                  %tr
+                    %th
+                      = link_to product_path(buy.product_id), class: 'no-underline' do
+                        = image_tag buy.product.images[0].image_url, class: 'product_image'
+                    %td{valign: "top"}
+                      = link_to product_path(buy.product_id), class: 'link_color no-underline' do
+                        = "商品名：#{buy.product.name}"
+
         %li.Content
-          = render "mypage/listings/products_list"
+          %table.ProductsList
+            %tbody
+              - @buyer_products.each do |buy|
+                - if buy.product.sold_out_flg == 2
+                  %tr
+                    %th
+                      = link_to product_path(buy.product_id), class: 'no-underline' do
+                        = image_tag buy.product.images[0].image_url, class: 'product_image'
+                    %td{valign: "top"}
+                      = link_to product_path(buy.product_id), class: 'link_color no-underline' do
+                        = "商品名：#{buy.product.name}"
