--- a/app/views/mypage/listings/index.html.haml
+++ b/app/views/mypage/listings/index.html.haml
@@ -27,4 +27,14 @@
               = render partial: "product", collection: @products_soldout
 
         %li.Content
-          = render "products_list"
+          %table.ProductsList
+            %tbody
+              - @products_finite.each do |product|
+                %tr
+                  %th
+                    = link_to product_path(product.id), class: 'no-underline' do
+                      = image_tag product.images[0].image_url, class: 'product_image'
+                  %td{valign: "top"}
+                    = link_to product_path(product.id), class: 'link_color no-underline' do
+                      = "商品名：#{product.name}"
+          
