--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -11,7 +11,7 @@
           .main__showMain__contents__topContent__itemBox__image
             .imageBox
               .mainImage
-                - if @product.sold_out_flg == true
+                - if @product.sold_out_flg == 1
                   = image_tag ('topimage/sold_out.png'), class: "mainSoldOut"
                 = image_tag @product.images[0].image_url, class: "img", id: "main-img"
                 .imgList
@@ -82,7 +82,7 @@
                   = link_to "削除する", product_path(@product.id), class: 'deleteBtn', method: :delete
               - else
                 .editBtn
-                  = link_to "配送完了しました", "#", class: 'edit-Btn'
+                  = link_to "配送完了しました", mypage_listing_path(product.id), class: 'edit-Btn', method: :put
             - else
               - if @product.sold_out_flg == 0
                 .editBtn
@@ -120,7 +120,7 @@
             .productField__ProductBox
               = link_to product_path(kind.id), class: "productLink" do
                 .productField__ProductBox__Image
-                  - if kind.sold_out_flg == true
+                  - if kind.sold_out_flg == 1
                     = image_tag ('topimage/sold_out.png'), class: "relationImg soldOut_flg"
                   = image_tag kind.images[0].image_url, class: "relationImg"
                   .productField__ProductBox__Info
@@ -128,8 +128,7 @@
                       = kind.name
                     .productField__ProductBox__Info__Ele
                       .prductField__ProductBox__Info__Ele__Price
-                        ¥
-                        = kind.price
+                        = "¥#{number_with_delimiter(kind.price)}"
                       .productField__ProductBox__Info__Ele__Favorite
                         = icon('fa','star likeIcon')
                         0
