--- a/app/views/items/_sidebar.html.haml
+++ b/app/views/items/_sidebar.html.haml
@@ -16,7 +16,7 @@
     %ul.SidebarMenu
       = link_to "#", id: '', class: 'no-underline' do
         %li ユーザー情報編集
-      = link_to "#", id: '', class: 'no-underline' do
+      = link_to edit_mypage_destination_path(current_user.id), id: '', class: 'no-underline' do
         %li 発送元・お届け先住所編集
       = link_to mypage_cards_path, id: '', class: 'no-underline' do
         %li クレジットカード情報
