--- a/app/assets/stylesheets/modules/product.scss
+++ b/app/assets/stylesheets/modules/product.scss
@@ -61,6 +61,15 @@
                 padding-left: 20px;
                 height: 100px;
                 border-bottom: 1px solid #f9f9f9;
+                .child_kind {
+                  height: 40px;
+                  width: 100%;
+                  margin: 5px 0;
+                }
+                .grandchild_category {
+                  height: 40px;
+                  width: 100%;
+                }
               }
             }
           }
