--- a/app/views/mypage/listings/_product.haml
+++ b/app/views/mypage/listings/_product.haml
@@ -5,7 +5,7 @@
   %td{valign: "top"}
     = link_to product_path(product.id), class: 'link_color no-underline' do
       = "商品名：#{product.name}"
-  %td
+  %td{width: "90"}
     - if product.sold_out_flg == 1
       .Edit-btn
         = link_to "配送完了", mypage_listing_path(product.id), class: 'btn_edit-small', method: :put
