ransack使用に修正/controller and views

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,14 +17,10 @@
             = link_to root_path do
               = image_tag("topimage/logo.png") 
           .Headfield__Top__Searchbox
-            -# %form.Headfield__Top__Searchbox{action: "/products", method: "get"}
-            -#   %input.Headfield__Top__Searchbox--input{placeholder: "キーワードから探す", type: "text", name: "keyword", id: "keyword"}
-            -#   %button.Headfield__Top__Searchbox--icon{type: "submit", name: "commit"}
-            -#     = image_tag ("topimage/icon-search 1.png"), class: "circle"
-            = search_form_for @search do |f|
-              = f.label :name_cont, "キーワードから探す"
-              = f.search_field :name_cont
-              = f.submit '検索'
+            = search_form_for @search, url: products_path, class: 'Headfield__Top__Searchbox' do |f|
+              = f.search_field :name_or_introduce_cont, class: 'Headfield__Top__Searchbox--input', placeholder: 'キーワードから探す'
+              = button_tag type: 'submit', class: "Headfield__Top__Searchbox--icon" do
+                = image_tag ("topimage/icon-search 1.png"), class: "circle"
 
         .Headfield__Bottom
           .Headfield__Bottom__left
