--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -54,13 +54,15 @@ header {
         width: 50%;
         display: flex;
         line-height: 32px;
-        &__kind {
+        &__category {
           .category {
             text-decoration: none;
             color: #333;
             padding-right: 30px;
             height: 100%;
           }
+        }
+        &__kind{
           .brand {
             text-decoration: none;
             color: #333;
