APIコントローラー、起動確認

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,7 @@
         .Headfield__Bottom
           .Headfield__Bottom__left
             .Headfield__Bottom__left__category
-              = link_to "カテゴリー", "#", class: "category", id: "category_menu"
+              = link_to "カテゴリー", api_category_path(0), class: "category", id: "category_menu"
               .Headfield__Bottom__left__category--field
             .Headfield__Bottom__left__kind
               = link_to "ブランド", "#", class: "brand"
