アソシエーション修正

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,15 +25,10 @@
         .Headfield__Bottom
           .Headfield__Bottom__left
             .Headfield__Bottom__left__category
-              = link_to "カテゴリー", api_category_path(0), class: "category", id: "category_menu"
+              = link_to "カテゴリー", "#", class: "category", id: "category_menu"
               .Headfield__Bottom__left__category--field
             .Headfield__Bottom__left__kind
               = link_to "ブランド", "#", class: "brand"
-              %ul.brand__menu
-                - Brand.all.each do |brand|
-                  = link_to "", class: "" do
-                    %li
-                      = brand.name
 
           .Headfield__Bottom__right
             - if user_signed_in?
