--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,34 +24,22 @@
 
         .Headfield__Bottom
           .Headfield__Bottom__left
-            -# .Headfield__Bottom__left__category
-            -#   = link_to "カテゴリー", "#", class: "category", id: "category_menu"
-            -#   .Headfield__Bottom__left__category--field
-            -# .Headfield__Bottom__left__kind
-            -#   = link_to "ブランド", "#", class: "brand"
-            %ul.menu
-              %li.menu__multi
-                = link_to "Menu multi level", "#", class: "init-bottom"
-                %ul.menu__second-level
-                  %li child menu
-                  %li child menu
-                  %li child menu
-              %li.menu__single
-                = link_to "Menu single", "#", class: "init-bottom"
-                %ul.menu__second-level
-                  %li child menu
-                  %li child menu
-                  %li child menu
+            .Headfield__Bottom__left__nav
+              = link_to "カテゴリー", api_category_path(0) ,class: "category_name no-underline", id: "catroy_top_title"
+              .Headfield__Bottom__left__nav__field
+            .Headfield__Bottom__left__nav
+              = link_to "ブランド", "#", class: "category_name no-underline"
+              %ul.level_first
+                %li child menu
+                %li child menu
+                %li child menu
 
           .Headfield__Bottom__right
             - if user_signed_in?
-              .Headfield__Bottom__right__menu
-                = link_to "マイページ", mypage_path, class: 'mypage'
+              = link_to "マイページ", mypage_path, class: 'Headfield__Bottom__right--menu no-underline'
             - else
-              .Headfield__Bottom__right__menu
-                = link_to "ログイン", new_user_session_path, class: "login"
-              .Headfield__Bottom__right__menu
-                = link_to "新規会員登録", new_user_registration_path, class: "new"
+              = link_to "ログイン", new_user_session_path, class: "Headfield__Bottom__right--menu no-underline"
+              = link_to "新規会員登録", new_user_registration_path, class: "Headfield__Bottom__right--menu no-underline"
 
     = link_to new_product_path, class: 'FloatBtn no-underline' do
       .FloatBtn__Text
