--- a/app/assets/stylesheets/modules/body_application.scss
+++ b/app/assets/stylesheets/modules/body_application.scss
@@ -1,11 +1,12 @@
 .container{
   background-color: rgb(238, 235, 235);
-  min-height: calc(100vh - 100px); 
+  min-height: calc(100vh - 85px); 
   height:auto !important; 
-  height: calc(100vh - 100px);
+  height: calc(100vh - 85px);
 }
 .no-underline {
   text-decoration: none;
+  color: #333
 }
 .MarginBox{
   height: 70px;
