--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -51,24 +51,35 @@ header {
       justify-content: space-between;
       &__left {    
         display: flex;
-        &__nav{
+        position: relative;
+        &__category{
           height: 1000px;
           font-size: 16px;
-          padding: 3px 10px 10px 10px;
+          padding: 3px 20px 10px 10px;
           margin-bottom: 10px;
-          
           &__field{
             margin-top: 8px;
             display: flex;
-            z-index: 100;
             &--menu{
               position: static;
               z-index: 100;
               p{
-                background-color: rgb(243, 236, 236);
+                background-color: #fff;
+                width: 100%;
+                border-bottom: 1px solid rgb(133, 131, 131);
+                padding: 8px;
+                box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
               }
             }
           }
+        }
+        &__brand{
+          font-size: 16px;
+          padding: 3px 20px 10px 10px;
+          position: absolute;
+          background-color: red;
+          width: 150px;
+          left: 130px;
         }
       }
       &__right {
