--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -63,7 +63,7 @@ header {
             &--menu{
               position: static;
               z-index: 100;
-              p{
+              li{
                 background-color: #fff;
                 width: 100%;
                 border-bottom: 1px solid rgb(133, 131, 131);
