--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -77,9 +77,22 @@ header {
           font-size: 16px;
           padding: 3px 20px 10px 10px;
           position: absolute;
-          background-color: red;
           width: 150px;
           left: 130px;
+          &__field{
+            margin-top: 8px;
+            display: none;
+            li{
+              background-color: #fff;
+              width: 100%;
+              border-bottom: 1px solid rgb(133, 131, 131);
+              padding: 8px;
+              box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
+            }
+          }
+        }
+        &__brand:hover ul{
+          display: block;
         }
       }
       &__right {
