--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,13 +28,12 @@
               = link_to "カテゴリー", api_category_path(0) ,class: "category_name no-underline", id: "catroy_top_title"
               .Headfield__Bottom__left__category__field
             .Headfield__Bottom__left__brand
-              = link_to "ブランド", "#", class: "category_name no-underline"
-              .Headfield__Bottom__left__brand__field
-                %ul
-                  - Brand.all.each do |brand|
-                    = link_to "#", class: "no-underline" do
-                      %li
-                        = brand.name
+              = link_to "ブランド", "#", class: "category_name no-underline", id: "brand_top_title"
+              %ul.Headfield__Bottom__left__brand__field
+                - Brand.all.each do |brand|
+                  = link_to products_path({q: {"brand_id_in": brand.id, commit: "Search" }}), class: "category_name no-underline" do
+                    %li
+                      = brand.name
 
           .Headfield__Bottom__right
             - if user_signed_in?
