--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -163,6 +163,10 @@ body{
               font-weight: 600;
             }
             .comment-box {
+              max-height: 400px;
+              overflow: scroll;
+              border: solid 1px silver;
+              padding: 10px;
               p {
                 margin-top: 5px;
               }
