--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -53,7 +53,7 @@ header {
         display: flex;
         position: relative;
         &__category{
-          height: 1000px;
+          height: 100px;
           font-size: 16px;
           padding: 3px 20px 10px 10px;
           margin-bottom: 10px;
@@ -77,17 +77,20 @@ header {
           font-size: 16px;
           padding: 3px 20px 10px 10px;
           position: absolute;
-          width: 150px;
+          width: 130px;
           left: 130px;
           &__field{
             margin-top: 8px;
             display: none;
+            
             li{
               background-color: #fff;
               width: 100%;
               border-bottom: 1px solid rgb(133, 131, 131);
               padding: 8px;
               box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
+              position: static;
+              z-index: 100;
             }
           }
         }
