--- a/app/assets/stylesheets/modules/show.scss
+++ b/app/assets/stylesheets/modules/show.scss
@@ -26,14 +26,14 @@ body{
               .mainImage{
                 display: flex;
                 flex-direction: column;
-                width: 560px;
+                width: 450px;
                 margin: 0 auto;
                 position: relative;
+                z-index: 10;
                 .mainSoldOut{
                   position: absolute;
                   object-fit: fill;
                   height: 346px;
-
                 }
                 .img{
                   border: 1px solid rgb(194, 192, 192);
